# dg-edit

./: CMakeLists.txt  README.md
include/: TextEditor.hpp
src/: TextEditor.cpp  main.cpp
